RESOLVED FIXED117882
[iOS] Hang drawing captions after pressing the home button while playing a video
https://bugs.webkit.org/show_bug.cgi?id=117882
Summary [iOS] Hang drawing captions after pressing the home button while playing a video
Jer Noble
Reported 2013-06-21 10:39:57 PDT
Hang drawing captions after pressing the home button while playing a video
Attachments
Patch (5.86 KB, patch)
2013-06-21 10:48 PDT, Jer Noble
eric.carlson: review+
Jer Noble
Comment 1 2013-06-21 10:48:44 PDT
Jer Noble
Comment 2 2013-06-21 10:52:53 PDT
Note You need to log in before you can comment on or make changes to this bug.