[iOS] Hang drawing captions after pressing the home button while playing a video https://bugs.webkit.org/show_bug.cgi?id=117882

Reviewed by Eric Carlson.

Instead of rendering in a callback on the main thread, pre-render the captions and pass to the main
thread as a CGImage. As such, rename paintTextTrackRepresentation() to createTextTrackRepresentationImage().

* html/shadow/MediaControlElements.cpp:
(WebCore::MediaControlTextTrackContainerElement::createTextTrackRepresentationImage): Renamed from
    paintTextTrackRepresentation. Now returns an Image object.
* html/shadow/MediaControlElements.h:
* platform/graphics/MediaPlayer.h:
* platform/graphics/TextTrackRepresentation.h:

Canonical link: https://commits.webkit.org/136020@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151844 268f45cc-cd09-0410-ab3c-d52691b4dbfc